@@ -191,7 +191,7 @@ static DIR		*finddir;
 static struct dirent	*finddata;
 static char		*findpath, *findpattern;
 
-char *Sys_FindFirstFile (const char *path, const char *pattern)
+const char *Sys_FindFirstFile (const char *path, const char *pattern)
 {
 	if (finddir)
 		Sys_Error ("Sys_FindFirst without FindClose");
@@ -206,7 +206,7 @@ char *Sys_FindFirstFile (const char *path, const char *pattern)
 	return Sys_FindNextFile();
 }
 
-char *Sys_FindNextFile (void)
+const char *Sys_FindNextFile (void)
 {
 	struct stat	test;
 
@@ -696,7 +696,7 @@ int main (int argc, char **argv)
 			usleep (16000);
 		}
 		/* If we're minimised, sleep a bit more */
-		if ( !(appState & SDL_APPACTIVE) )
+		if ( !(appState & SDL_APPACTIVE))
 		{
 			scr_skipupdate = 1;
 			usleep (32000);
