@@ -179,7 +179,7 @@ static DIR		*finddir;
 static struct dirent	*finddata;
 static char		*findpath, *findpattern;
 
-char *Sys_FindFirstFile (const char *path, const char *pattern)
+const char *Sys_FindFirstFile (const char *path, const char *pattern)
 {
 	if (finddir)
 		Sys_Error ("Sys_FindFirst without FindClose");
@@ -194,7 +194,7 @@ char *Sys_FindFirstFile (const char *path, const char *pattern)
 	return Sys_FindNextFile();
 }
 
-char *Sys_FindNextFile (void)
+const char *Sys_FindNextFile (void)
 {
 	struct stat	test;
 
@@ -588,7 +588,6 @@ int main (int argc, char **argv)
 		if (NET_CheckReadTimeout(0, 10000) == -1)
 			continue;
 
-	// find time passed since last cycle
 		newtime = Sys_DoubleTime ();
 		time = newtime - oldtime;
 		oldtime = newtime;
