@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2012-05-31 (SVN):
+    * Changed Sys_FindFirst() and Sys_FindNext() to return const.
+
+2012-05-31 (SVN):
     * Steven reports that uhexen2 works nicely on Solaris: updated the
       release notes and TODO files.
 
